# mulinex_description

./: CLAUDE.md  README.md  package.xml
launch/: display_mulinex.launch.py  display_mulinex_white.launch.py  gazebo_mulinex.launch.py
meshes/: simplify_meshes.py
urdf/: goat_foot.xacro  imu_sensor.xacro  leg.xacro  lidar_sensor.xacro  links.xacro  material.xacro  mulinex.xacro  mulinex_white.xacro  omni_car_module.xacro  omnicar.xacro  omnicar_gazebo.xacro  omnicar_ignition.xacro  wheel.xacro
