<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>mulinex_description</name>
    <version>0.0.0</version>
    <description>Robot URDF/Xacro description package providing kinematic and dynamic models for the Mulinex quadruped and OmniCar wheeled variants.</description>
    <maintainer email="p.gori3@studenti.unipi.it">Pietro Gori</maintainer>
    <license>TODO: License declaration</license>

    <author email="p.gori3@studenti.unipi.it">Pietro Gori</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
